started writing contrastive Trainer in notebook

--- a/contrastive.ipynb
+++ b/contrastive.ipynb
@@ -220,7 +220,7 @@
     "        \n",
     "        # TODO: Decide to remove or keep it\n",
     "        self.criterion = nn.CrossEntropyLoss()\n",
-    "        self.output = namedtuple(\"output\", [\"loss\", \"logits\"])\n",
+    "        self.output = namedtuple(\"output\", [\"loss\",\"embeds\", \"logits\"])\n",
     "        \n",
     "    def forward(self, **kwargs):\n",
     "        labels = kwargs['labels']\n",
@@ -230,11 +230,13 @@
     "        embeds = self.features(pixel_values=video).last_hidden_state[:, 0, :]\n",
     "        embeds = embeds.squeeze()\n",
     "        \n",
-    "        \n",
     "        logits = self.l1(embeds)\n",
-    "        logits = F.relu(embeds)\n",
+    "        logits = F.relu(logits)\n",
+    "        logits = self.l2(logits)\n",
+    "        \n",
     "        loss = self.get_loss(logits, labels)\n",
-    "        return  (loss, logits)\n",
+    "        \n",
+    "        return  (loss, embeds, logits)\n",
     "    \n",
     "    def get_loss(self, logits, labels):\n",
     "        if not isinstance(labels, torch.Tensor):\n",
