--- a/contrastive.ipynb
+++ b/contrastive.ipynb
@@ -17,6 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "If you want to look at how the video dataloaders are built refer to the distillation notebook.\n",
+    "The code from that notebook is used to built the dataloader function so they can be reused\n",
+    "'''\n",
+    "\n",
     "train, test, dev = load_video_dataloaders()\n",
     "i, item = next(enumerate(train))\n"
    ]
@@ -52,8 +57,11 @@
     }
    ],
    "source": [
+    "'''\n",
+    "The utility functions to investigte the objects from the dataloaders we built\n",
+    "'''\n",
     "investigate_video(item)\n",
-    "display_gif(item['video'])\n"
+    "display_gif(item['video'])"
    ]
   },
   {
@@ -62,6 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Load the model to be used for contrastive learning\n",
+    "We will use the finetuned VideoMAE on the MELD dataset which we finetuned for distillation.\n",
+    "But fresh model can also be used from hugging face. To use Hugging face model directly replace the name with `\"MCG-NJU/videomae-base\"`\n",
+    "'''\n",
+    "\n",
     "model_name = \"./videomae-base-finetuned-meld/checkpoint-4069/\"\n",
     "model = load_mae_simCLR_model(model_name=model_name, num_labels=7)"
    ]
@@ -83,6 +97,9 @@
     }
    ],
    "source": [
+    "'''\n",
+    "Custom collator for the video_mae model. To convert our dataset in the format recognized by the model\n",
+    "'''\n",
     "def collate_fn(examples):\n",
     "    pixel_values = torch.stack(\n",
     "        [example[\"video\"].permute(1, 0, 2, 3) for example in examples]\n",
@@ -93,15 +110,6 @@
     "inputs = collate_fn([item, item])\n",
     "inputs['pixel_values']\n",
     "inputs['labels']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = model(**inputs)"
    ]
   },
   {
@@ -132,7 +140,9 @@
     }
    ],
    "source": [
-    "\n",
+    "'''\n",
+    "Training hyperparameters for the model\n",
+    "'''\n",
     "model_name = \"contastive-vmae\"\n",
     "num_epochs = 11\n",
     "batch_size = 4\n",
@@ -154,6 +164,10 @@
     "    save_total_limit =3,\n",
     ")\n",
     "\n",
+    "\n",
+    "'''\n",
+    "Wrapper around hugging face to train the contrastive model. How the model computes contastive loss can be found in the model definition in emocon/models/video_mae.py\n",
+    "'''\n",
     "trainer = ContrastiveTrainer(\n",
     "    model=model,\n",
     "    args=args,\n",
