--- a/finetune_bert.ipynb
+++ b/finetune_bert.ipynb
@@ -6,7 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer"
+    "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from datasets import Dataset\n",
+    "from transformers import (\n",
+    "    TrainingArguments, Trainer\n",
+    ")\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "from transformers import DataCollatorWithPadding\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the model from huggingface"
    ]
   },
   {
@@ -76,6 +91,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building the tokenized pyarrow Dataset object for the MELD dataset using the helper functions below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -124,9 +146,7 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "from datasets import Dataset\n",
+    "\n",
     "\n",
     "dataset_root_path = \"/media/cv/Extreme Pro1/MELD.Raw/MELD.Raw\"\n",
     "\n",
@@ -153,7 +173,6 @@
     "        })\n",
     "    return df\n",
     "\n",
-    "\n",
     "def get_dataset(dataset_root_path):\n",
     "    train = load_df(os.path.join(dataset_root_path, 'train.csv'))\n",
     "    train = Dataset.from_pandas(train)\n",
@@ -179,26 +198,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['text', 'label', 'filename', 'input_ids', 'attention_mask'],\n",
-       "    num_rows: 9989\n",
-       "})"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train"
+    "## Loading the huggingface trainer and defining hyperparameters for training"
    ]
   },
   {
@@ -207,9 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import (\n",
-    "    TrainingArguments, Trainer\n",
-    ")\n",
+    "\n",
     "\n",
     "save_path = './bert-base-finetuned-meld'\n",
     "batch_size=16\n",
@@ -234,6 +235,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the hugging face traininer and using custom metrics of accuracy and f1 score for evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -247,8 +255,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, f1_score\n",
-    "from transformers import DataCollatorWithPadding\n",
     "\n",
     "# Prepare data collator for padding sequences\n",
     "# data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
@@ -497,59 +503,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': tensor([[ 101, 2129, 2024, 2017,  102]]), 'attention_mask': tensor([[1, 1, 1, 1, 1]])}"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_input = tokenizer(\"how are you\", return_tensors='pt')\n",
-    "test_input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'logits'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[113], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel_embed\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtest_input\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcuda\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogits\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'logits'"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "model_embed(**test_input.to('cuda'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -576,89 +529,6 @@
    ],
    "source": [
     "trainer.evaluate(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
-    "\n",
-    "\n",
-    "class TeacherBERT(nn.Module):\n",
-    "    def __init__(self, model, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.bert = model.distilbert\n",
-    "    \n",
-    "    def forward(self, **kwargs):\n",
-    "        bert_output = self.bert(**kwargs)[0]\n",
-    "        return bert_output[:, 0, :]\n",
-    "\n",
-    "# Assuming `model` is your pre-trained BERT model and `test_input` is your input tensor\n",
-    "model_embed = TeacherBERT(model)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load the finetuned model from the checkpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DistilBertForSequenceClassification(\n",
-       "  (distilbert): DistilBertModel(\n",
-       "    (embeddings): Embeddings(\n",
-       "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
-       "      (position_embeddings): Embedding(512, 768)\n",
-       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "      (dropout): Dropout(p=0.1, inplace=False)\n",
-       "    )\n",
-       "    (transformer): Transformer(\n",
-       "      (layer): ModuleList(\n",
-       "        (0-5): 6 x TransformerBlock(\n",
-       "          (attention): MultiHeadSelfAttention(\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "          (ffn): FFN(\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "            (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "            (activation): GELUActivation()\n",
-       "          )\n",
-       "          (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (pre_classifier): Linear(in_features=768, out_features=768, bias=True)\n",
-       "  (classifier): Linear(in_features=768, out_features=7, bias=True)\n",
-       "  (dropout): Dropout(p=0.2, inplace=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.from_pretrained('./bert-base-finetuned-meld/checkpoint-2669/')"
    ]
   }
  ],
