--- a/finetune_video_mae.ipynb
+++ b/finetune_video_mae.ipynb
@@ -11,20 +11,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# from huggingface_hub import hf_hub_download\n",
+    "path to the MELD dataset videos which are reorganized in the following format\n",
+    "The names of the videos inside the folder can be anything. This is the standard way to organize datasets for classification.\n",
     "\n",
-    "# hf_dataset_identifier = \"sayakpaul/ucf101-subset\"\n",
-    "# filename = \"UCF101_subset.tar.gz\"\n",
-    "# file_path = hf_hub_download(\n",
-    "#     repo_id=hf_dataset_identifier, filename=filename, repo_type=\"dataset\"\n",
-    "# )\n",
+    "MELD Dataset \\\n",
+    "train \\\n",
+    "----    Anger\\\n",
+    "------     1.mp4\\\n",
+    "------      2.mp4\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "----    Surprise\\\n",
+    "------     1.mp4\\\n",
+    "------     2.mp4\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "------     .\n",
     "\n",
-    "# !tar xf {file_path}\n"
+    "\n",
+    "test \\\n",
+    "----    Anger\\\n",
+    "------     1.mp4\\\n",
+    "------      2.mp4\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "----    Surprise\\\n",
+    "------     1.mp4\\\n",
+    "------     2.mp4\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "------     .\n",
+    "\n",
+    "\n",
+    "dev \\\n",
+    "----    Anger\\\n",
+    "------     1.mp4\\\n",
+    "------      2.mp4\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "----    Surprise\\\n",
+    "------     1.mp4\\\n",
+    "------     2.mp4\\\n",
+    "------     .\\\n",
+    "------     .\\\n",
+    "------     .\n"
    ]
   },
   {
@@ -42,42 +78,12 @@
     }
    ],
    "source": [
-    "dataset_root_path = \"UCF101_subset\"\n",
-    "\n",
-    "dataset_root_path = \"/media/cv/Extreme Pro1/MELD.Raw/reorganized_meld_data\"\n",
-    "!find {dataset_root_path} | head -5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pathlib\n",
     "import os\n",
     "\n",
-    "dataset_root_path = pathlib.Path(dataset_root_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.exists(dataset_root_path)"
+    "dataset_root_path = \"/media/cv/Extreme Pro1/MELD.Raw/reorganized_meld_data\"\n",
+    "dataset_root_path = pathlib.Path(dataset_root_path)\n",
+    "assert os.path.exists(dataset_root_path) == True\n"
    ]
   },
   {
@@ -94,6 +100,7 @@
     }
    ],
    "source": [
+    "# Read and check the count of all the videos available\n",
     "video_count_train = len(list(dataset_root_path.glob(\"train/*/*.mp4\")))\n",
     "video_count_val = len(list(dataset_root_path.glob(\"dev/*/*.mp4\")))\n",
     "video_count_test = len(list(dataset_root_path.glob(\"test/*/*.mp4\")))\n",
@@ -122,6 +129,8 @@
     }
    ],
    "source": [
+    "# build a list of all the video files in the folders\n",
+    "\n",
     "all_video_file_paths = (\n",
     "    list(dataset_root_path.glob(\"train/*/*.mp4\"))\n",
     "    + list(dataset_root_path.glob(\"dev/*/*.mp4\"))\n",
@@ -144,6 +153,8 @@
     }
    ],
    "source": [
+    "# infer class labels from the paths\n",
+    "\n",
     "class_labels = sorted({str(path).split(\"/\")[-2] for path in all_video_file_paths})\n",
     "label2id = {label: i for i, label in enumerate(class_labels)}\n",
     "id2label = {i: label for label, i in label2id.items()}\n",
@@ -166,6 +177,8 @@
     }
    ],
    "source": [
+    "# Load the VideoMAE model and Image Processor for the model\n",
+    "\n",
     "from transformers import VideoMAEImageProcessor, VideoMAEForVideoClassification\n",
     "\n",
     "image_processor = VideoMAEImageProcessor.from_pretrained(model_ckpt)\n",
@@ -183,6 +196,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports for processing videos from pytorch library\n",
+    "'''\n",
+    "The library has an import issue. It is broken and I think you need to fix the affine import in the library in one file.\n",
+    "If you get an error locate the file where error occurs and fix the affine import from functional library\n",
+    "'''\n",
     "import pytorchvideo.data\n",
     "\n",
     "from pytorchvideo.transforms import (\n",
@@ -209,7 +227,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Create Transforms that will be applied to the data and build datasets from using \n",
+    "pytorch video library\n",
+    "'''\n",
     "import os\n",
+    "\n",
     "\n",
     "mean = image_processor.image_mean\n",
     "std = image_processor.image_std\n",
@@ -310,27 +333,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['video', 'video_name', 'video_index', 'clip_index', 'aug_index', 'label'])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_video = next(iter(train_dataset))\n",
-    "sample_video.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -349,6 +351,9 @@
     }
    ],
    "source": [
+    "sample_video = next(iter(train_dataset))\n",
+    "print(\"Sample Video Keys:\",  sample_video.keys())\n",
+    "\n",
     "def investigate_video(sample_video):\n",
     "    \"\"\"Utility to investigate the keys present in a single video sample.\"\"\"\n",
     "    for k in sample_video:\n",
@@ -369,6 +374,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Utility functions to visualize the videos from the built dataset\n",
+    "\"\"\"\n",
+    "\n",
     "import imageio\n",
     "import numpy as np\n",
     "from IPython.display import Image\n",
@@ -431,6 +440,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Defining hyperparameters for training\n",
+    "\n",
     "from transformers import TrainingArguments, Trainer\n",
     "\n",
     "model_name = model_ckpt.split(\"/\")[-1]\n",
@@ -460,6 +471,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Custom collator function that converts how data is fed from dataloader to the model\n",
+    "The modal takes pixel values as input for the whole video and labels if you want to compute a loss for the training.\n",
+    "'''\n",
     "import torch\n",
     "\n",
     "def collate_fn(examples):\n",
@@ -489,6 +504,9 @@
     }
    ],
    "source": [
+    "'''\n",
+    "Hugging face trainer with custom metrics of f1_score and accuracy score\n",
+    "'''\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
     "trainer = Trainer(\n",
@@ -698,6 +716,7 @@
     }
    ],
    "source": [
+    "# training loop\n",
     "trainer.train()"
    ]
   },
@@ -716,6 +735,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Saving the model\n",
+    "\n",
+    "'''\n",
     "trainer.save_model()\n",
     "test_results = trainer.evaluate(test_dataset)\n",
     "trainer.log_metrics(\"test\", test_results)\n",
@@ -727,7 +750,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inference"
+    "## Inference\n",
+    "\n",
+    "Using the model for inference"
    ]
   },
   {
